fix sticky height on mobile

--- a/src/wmnds/assets/sass/styles/_utilities.scss
+++ b/src/wmnds/assets/sass/styles/_utilities.scss
@@ -32,6 +32,11 @@
     top: 0;
     max-height: 100vh;
     overflow-y: auto;
+
+    @media screen and (max-width: $breakpoint-md) {
+      position: initial;
+      max-height: fit-content;
+    }
   }
 }
 
